[gd_scene load_steps=2 format=3 uid="uid://dnpdtsrec3dx3"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_pjnvx"]

[node name="Menus" type="Node"]

[node name="MenuCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="MenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjnvx")

[node name="MainMenu" type="MarginContainer" parent="MenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuControl/MainMenu"]
layout_mode = 2
color = Color(0.192157, 0, 0.831373, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/MainMenu"]
layout_mode = 2
alignment = 1

[node name="ButtonPanel" type="Panel" parent="MenuControl/MainMenu/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MenuControl/MainMenu/VBoxContainer/ButtonPanel"]
layout_mode = 2
offset_left = 380.0
offset_top = 4.0
offset_right = 580.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="HowToButton" type="Button" parent="MenuControl/MainMenu/VBoxContainer/ButtonPanel"]
layout_mode = 2
offset_left = 380.0
offset_top = 58.0
offset_right = 580.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 30
text = "How To Play"

[node name="SettingsButton" type="Button" parent="MenuControl/MainMenu/VBoxContainer/ButtonPanel"]
layout_mode = 2
offset_left = 852.0
offset_top = 71.0
offset_right = 1052.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="HowToMenu" type="MarginContainer" parent="MenuControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="MenuControl/HowToMenu"]
layout_mode = 2
color = Color(0.137255, 0.341176, 0.176471, 1)

[node name="Panel" type="Panel" parent="MenuControl/HowToMenu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuControl/HowToMenu/Panel"]
layout_mode = 2
offset_left = 1735.0
offset_top = 50.0
offset_right = 1862.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="SettingsMenu" type="MarginContainer" parent="MenuControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuControl/SettingsMenu"]
layout_mode = 2
color = Color(0.509804, 0.145098, 0.145098, 1)

[node name="Panel" type="Panel" parent="MenuControl/SettingsMenu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="BackButton2" type="Button" parent="MenuControl/SettingsMenu/Panel"]
layout_mode = 2
offset_left = 1762.0
offset_top = 23.0
offset_right = 1890.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="HSlider" type="HSlider" parent="MenuControl/SettingsMenu/Panel"]
layout_mode = 0
offset_left = 244.0
offset_top = 217.0
offset_right = 744.0
offset_bottom = 333.0
min_value = -30.0
max_value = 0.0

[connection signal="pressed" from="MenuControl/MainMenu/VBoxContainer/ButtonPanel/PlayButton" to="MenuControl" method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuControl/MainMenu/VBoxContainer/ButtonPanel/HowToButton" to="MenuControl" method="_on_how_to_button_pressed"]
[connection signal="pressed" from="MenuControl/MainMenu/VBoxContainer/ButtonPanel/SettingsButton" to="MenuControl" method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuControl/HowToMenu/Panel/BackButton" to="MenuControl" method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuControl/SettingsMenu/Panel/BackButton2" to="MenuControl" method="_on_back_button_2_pressed"]
[connection signal="value_changed" from="MenuControl/SettingsMenu/Panel/HSlider" to="MenuControl" method="_on_h_slider_value_changed"]
